# Copyright 2026 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bsize"
version = "0.1.0-rc.1"

categories = ["development-tools", "no-std", "value-formatting"]
description = "Semantic wrappers and utilities for byte size representations."
documentation = "https://docs.rs/bsize"
keywords = ["bytes", "size", "humanize", "format", "parser"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

[dev-dependencies]
divan = "0.1.21"
parse-size = "1.1.0"

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
