# Copyright 2026 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bsize"
version = "0.3.0-rc.2"

categories = ["development-tools", "no-std", "value-formatting"]
description = "Semantic wrappers and utilities for byte size representations."
documentation = "https://docs.rs/bsize"
keywords = ["bytes", "size", "humanize", "format", "parser"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
nightly = []
serde = ["dep:serde_core"]

[dependencies]
macroweave = "0.1.0"
serde_core = { version = "1", default-features = false, optional = true }

[dev-dependencies]
insta = { version = "1.47.2" }
quickcheck = { version = "1.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
toml = { version = "1.1.2" }

[lints]
workspace = true
